[gd_scene load_steps=2 format=3 uid="uid://c7u1m6w3cex3j"]

[ext_resource type="Script" uid="uid://bqyncpl8kcdl0" path="res://addons/parley/components/condition/condition.gd" id="1_406sr"]

[node name="Condition" type="VBoxContainer" node_paths=PackedStringArray("operator_editor", "value_editor")]
script = ExtResource("1_406sr")
operator_editor = NodePath("OperatorContainer/OperatorEditor")
value_editor = NodePath("ValueContainer/ValueEditor")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="FactContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="FactLabel" type="Label" parent="FactContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Fact"

[node name="FactSelector" type="OptionButton" parent="FactContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 3
popup/item_0/text = "Alice gave coffee"
popup/item_1/text = "Bob has coffee"
popup/item_1/id = 1
popup/item_2/text = "Alice gave coffee"
popup/item_2/id = 2

[node name="OperatorContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="OperatorLabel" type="Label" parent="OperatorContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Operator"

[node name="OperatorEditor" type="OptionButton" parent="OperatorContainer"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 2
popup/item_0/text = "Equal"
popup/item_1/text = "Not Equal"
popup/item_1/id = 1

[node name="ValueContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ValueLabel" type="Label" parent="ValueContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Value"

[node name="ValueEditor" type="LineEdit" parent="ValueContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "found"

[connection signal="item_selected" from="FactContainer/FactSelector" to="." method="_on_fact_selector_item_selected"]
[connection signal="item_selected" from="OperatorContainer/OperatorEditor" to="." method="_on_operator_editor_item_selected"]
[connection signal="text_changed" from="ValueContainer/ValueEditor" to="." method="_on_value_editor_text_changed"]
